# vehicle-physics-adventure

./: README.md  main.py  pyproject.toml
.github/workflows/: code-quality.yml
app/: scene.py  telemetry.py  viewer.py
app/entities/: base.py  naivevehicle.py  vehicle.py
app/solvers/: wheel.py
app/ui/: graph.py
test/: test_graph.py
